tests/negative/req11/label_mismatch.mvl
//! Negative test: Secret[String] returned where String is expected.
//! The label mismatch must map to Req 11 (IFC), not Req 1 (Type Safety).
//! See #1027.

fn greet(name: String) -> String {
    "Hello"
}

fn leak(s: Secret[String]) -> String {
    greet(s)
}
